--- a/app/Resources/views/category/index.html.twig
+++ b/app/Resources/views/category/index.html.twig
@@ -7,14 +7,15 @@
 {% block body %}
 
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="page-header">
-            <h2><a href="{{ path('category') }}">Category</a></h2>
-        </div>
-    </div>       
+    <div class="row">
+        <div class="col-md-12">
+            <div class="page-header-left">
+                <h2><a href="{{ path('product') }}">Product</a></h2></div>
+            <div class="page-header-right">
+                <h2><a href="{{ path('category') }}">Category</a></h2>
+            </div></div>
 
-<!-- FILTERING -->
+        <!-- FILTERING -->
 <div class="col-md-12">
     <div  id="filters" class="collapse">
 
@@ -114,8 +115,8 @@
                         <th width="20px"><input type="checkbox" class="check-all" onclick="toggleAll(this)"></th>
 
 
-                            <th>dsa</th>
-                            <th>asd</th>
+                            <th>ID</th>
+                            <th>NAME</th>
     
                        
                         <th width = "130px">List</th>
